--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -1,10 +1,10 @@
-name: Hello World Workflow
-
-on: [push]
+name: my glow
+on: push
 
 jobs:
-  say-hello-job:
+  print_message:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Hello World
-        run: echo "Hello world!"
+      - name: print message
+        run: echo "This is my code"
+    
